[package]
name = "embassy-pwm-sequence-gradients"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "embassy-pwm-sequence-gradients"
test = false
bench = false

[features]
default = ["nightly"]
nightly = [
    "embedded-hal-async",
    "embassy-executor/nightly",
    "embassy-nrf/nightly",
    "embassy-nrf/unstable-traits",
    "embassy-time/nightly",
    "embassy-time/unstable-traits",
    "static_cell/nightly",
    "embedded-io/async",
]

[dependencies]
embassy-futures = { version = "0.1.0", path = "./embassy/embassy-futures" }
embassy-sync = { version = "0.2.0", path = "./embassy/embassy-sync", features = [
    "defmt",
] }
embassy-executor = { version = "0.2.0", path = "./embassy/embassy-executor", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", path = "./embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.1.0", path = "./embassy/embassy-nrf", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }
embedded-io = "0.4.0"

defmt = "0.3"
defmt-rtt = "0.4"

static_cell = "1.1"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
embedded-storage = "0.3.0"
embedded-hal-async = { version = "0.2.0-alpha.1", optional = true }

colorous = { version = "*", default-features = false }
